--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@ body {
     text-align: center;
 }
 
-#myCanvas {
+#carCanvas {
     background: lightgray;
+
+}
+
+#networkCanvas {
+    background: black;
 
 }
