--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body {
     margin: 0;
-    background: darkgray;
+    /*background: darkgray;*/
     overflow: hidden;
     text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 #carCanvas {
@@ -12,5 +14,20 @@ body {
 
 #networkCanvas {
     background: black;
+}
 
+#verticalButtons {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    border: none;
+    border-radius: 5px;
+    padding: 5px 5px 7px 5px;
+    margin: 2px;
+    cursor: pointer;
+}
+button:hover {
+    background: blue;
 }
